cmake_minimum_required(VERSION 3.0)

project(DS_Exercise)

set(CMAKE_CXX_STANDARD 20)


add_executable(DS_Exercise main.cpp Matrix.cpp Matrix.h vector.h list.h stack.h stack.h stack_application.h queue.h queue_application.h skip_list.h hashing.h hashing_application.h binary_tree.h priority_queue.h "height_based leftist tree.h" game_tree.h BST_application.h balanced_tree.h graph.h algorithm.h)